force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/ArdiraSurvey__Survey_Category_Result__c.object-meta.xml
<CustomObject>
    <description>This object stores the aggregated scores of survey questions.</description>
    <label>Ardira Survey Category Result</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Survey Category Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>