force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Category__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Result contains the scores aggregated by this category.</description>
    <inlineHelpText>Result contains the scores aggregated by this category.</inlineHelpText>
    <label>Category</label>
    <referenceTo>ArdiraSurvey__Category__c</referenceTo>
    <relationshipLabel>Survey Category Results</relationshipLabel>
    <relationshipName>Survey_Category_Results</relationshipName>
    <type>Lookup</type>
</CustomField>