force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Max_Score_Raw__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Max_Score_Raw__c</fullName>
    <description>Sum of the max raw scores of all the questions within the section or cattegory.</description>
    <inlineHelpText>Survey response max raw score (sum of the max raw scores of all the questions within the category).</inlineHelpText>
    <label>Max Score (Raw)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>