force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Score_Aggregated_By__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Aggregated_By__c</fullName>
    <description>Result contains score aggregated by this.</description>
    <inlineHelpText>Result contains score aggregated by this.</inlineHelpText>
    <label>Score Aggregated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>