force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Score_Level__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Level__c</fullName>
    <description>Textual representation of the score based on the &quot;Score Level Config&quot; defined for this survey.</description>
    <inlineHelpText>Textual representation of the score based on the &quot;Score Level Configuration&quot; defined for this survey.</inlineHelpText>
    <label>Score Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>