force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Score_Percentage__c</fullName>
    <description>Average of the percentage score of all the questions within the section or category</description>
    <inlineHelpText>Average of the percentage score of all the questions within the section or category</inlineHelpText>
    <label>Score (Percentage)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>