force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Section__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Result contains aggregated scores for this section.</description>
    <inlineHelpText>Result contains aggregated scores for this section.</inlineHelpText>
    <label>Section</label>
    <referenceTo>ArdiraSurvey__Section__c</referenceTo>
    <relationshipLabel>Survey Category Results</relationshipLabel>
    <relationshipName>Survey_Category_Results</relationshipName>
    <type>Lookup</type>
</CustomField>