force-app/main/default/objects/ArdiraSurvey__Survey_Category_Result__c/fields/ArdiraSurvey__Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Result is associated with this survey result.</description>
    <inlineHelpText>Result is associated with this survey result.</inlineHelpText>
    <label>Survey Result</label>
    <referenceTo>ArdiraSurvey__Survey_Result__c</referenceTo>
    <relationshipLabel>Survey Category Results</relationshipLabel>
    <relationshipName>Survey_Category_Results</relationshipName>
    <type>Lookup</type>
</CustomField>